--- a/Alpha/index.html
+++ b/Alpha/index.html
@@ -17,5 +17,7 @@
         <li>Two</li>
         <li>Three</li>
     </ol>
+    <a href="#">Gmail</a>
+    <img src="https://www.shutterstock.com/image-photo/lion-berber-predator-face-nad-260nw-1772940749.jpg" alt="new">
 </body>
 </html>
