editing the css route

--- a/Alpha/current/index.html
+++ b/Alpha/current/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="" id="outer"><h1>waw</h1></div>
+    <div class="fClass" id="outer"><h1>waw</h1></div>
     <div class="" id="inner">
       <h1>waw</h1>
+    </div>
+    <div class="button">
+      <button>Click Me!</button>
     </div>
   </body>
 </html>
