--- a/Alpha/current/index.html
+++ b/Alpha/current/index.html
@@ -11,7 +11,7 @@
     <div class="" id="inner">
       <h1>waw</h1>
     </div>
-    <div class="button">
+    <div class="btn">
       <button>Click Me!</button>
     </div>
   </body>
