added text area for js access

--- a/Alpha/current/demo/index.html
+++ b/Alpha/current/demo/index.html
@@ -15,6 +15,9 @@
       <button>Click Me!</button>
     </div>
     <p>Hello, This is the creator of the page.</p>
+
+    <br />
+    <input id="text1" type="text" />
     <script src="script.js"></script>
   </body>
 </html>
