index file for the game

--- a/Alpha/current/patternGame/index.html
+++ b/Alpha/current/patternGame/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="mainContainer">
       <h3>simon game</h3>
+      <div id="text1"></div>
       <div class="box1">
         <div><button id="one">1</button></div>
         <div><button id="two">2</button></div>
