demo html for testing the js scripts

--- a/Alpha/current/demo.html
+++ b/Alpha/current/demo.html
@@ -19,5 +19,6 @@
       facilis.
     </h1>
     <script src="callBackHell.js"></script>
+    <!-- <script src="promiseReal.js"></script> -->
   </body>
 </html>
