--- a/Alpha/current/demo.html
+++ b/Alpha/current/demo.html
@@ -18,7 +18,8 @@
       natus, velit impedit neque! Nemo amet a perferendis labore aliquam
       facilis.
     </h1>
-    <script src="callBackHell.js"></script>
+    <!-- <script src="callBackHell.js"></script> -->
     <!-- <script src="promiseReal.js"></script> -->
+    <script src="await2.js"></script>
   </body>
 </html>
