demo html updated for the addtional test script

--- a/Alpha/current/demo.html
+++ b/Alpha/current/demo.html
@@ -10,6 +10,7 @@
       padding: 0 2em;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <body>
     <!-- <script src="callFn2.js"></script> -->
     <h1>
@@ -18,8 +19,12 @@
       natus, velit impedit neque! Nemo amet a perferendis labore aliquam
       facilis.
     </h1>
+    <h3>Get Jokes</h3>
+    <button id="btn1">Click Me!</button>
+    <div id="ans"></div>
     <!-- <script src="callBackHell.js"></script> -->
     <!-- <script src="promiseReal.js"></script> -->
-    <script src="await2.js"></script>
+    <!-- <script src="await2.js"></script> -->
+    <script src="axios1.js"></script>
   </body>
 </html>
